fixed the logo on the html page; was looking skewed. Changed from padding-top 20px to align-top 20px and image is perfect

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,7 +193,7 @@ body {
 
 .header-logo {
     box-align: center;
-    padding-top: 30px;
+    margin-top: 30px;
     
 }
 
